# seminar

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
creview/: CMakeLists.txt  main.tex
creview/tex/: compiling.tex  prewriting.tex  progBasics.tex  purpose.tex
creview/tikz/: psuedoCodeBlkDia.tex
proj/: .main.tex.swp  main.tex
proj/tex/: .proj.tex.swp  proj.tex
sampleCode/: CMakeLists.txt
sampleCode/src/: arrays.c  fullProg.c  helloWorld.c  test.c  variables.c
slides/: CMakeLists.txt  main.tex
slides/tex/: mcu.tex  prewriting.tex  progBasics.tex  purpose.tex  slides.tex
